<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todos_convidados">Todos os Convidados</string>
    <string name="presentes">Presentes</string>
    <string name="ausentes">Ausentes</string>
    <string name="nome">Nome</string>
    <string name="insira_nome">Insira seu nome</string>
    <string name="presenca">Presença</string>
    <string name="marc_presente">Presente</string>
    <string name="marc_ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="convidado">Convidado</string>
    <string name="alo">Alo fui clicado</string>
</resources>